added edits from main repo to minimize breakage

--- a/src/main/resources/edu/wpi/cs3733/d20/teamE/views/ReservationCalendar.fxml
+++ b/src/main/resources/edu/wpi/cs3733/d20/teamE/views/ReservationCalendar.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import com.calendarfx.view.CalendarView?>
 <AnchorPane fx:id="anchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.d20.teamE.views.serviceRequest.onCallBed.ReservationCalendarController">
    <children>
       <VBox fx:id="vbox" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
