--- a/src/main/resources/edu/wpi/cs3733/d20/teamE/views/OnCallBedEAPI.fxml
+++ b/src/main/resources/edu/wpi/cs3733/d20/teamE/views/OnCallBedEAPI.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0"
-            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="edu.wpi.cs3733.d20.teamE.views.OnCallBedController">
+            xmlns="http://javafx.com/javafx/11.0.1" fx:controller="edu.wpi.cs3733.d20.teamE.views.OnCallBedControllerEAPI">
     <children>
         <SplitPane dividerPositions="0.5" layoutY="39.20000076293945" orientation="VERTICAL" prefHeight="400.0"
                    prefWidth="857.6" style="-fx-background-color: None;" AnchorPane.bottomAnchor="0.0"
