--- a/src/main/resources/edu/wpi/cs3733/d20/teamE/views/OnCallBedEAPI.fxml
+++ b/src/main/resources/edu/wpi/cs3733/d20/teamE/views/OnCallBedEAPI.fxml
@@ -281,7 +281,7 @@
                                 </JFXButton>
                             </children>
                         </GridPane>
-                        <GridPane fx:id="bedGridPane" hgap="10.0" vgap="10.0" StackPane.alignment="CENTER">
+                        <GridPane fx:id="bedGridPane" hgap="10.0" vgap="10.0" visible="false" StackPane.alignment="CENTER">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
